Avoid the double backdrop overlap in PRs

--- a/extension/content.css
+++ b/extension/content.css
@@ -722,10 +722,11 @@ a.tabnav-extra[href$="mastering-markdown/"] {
 :root .pagehead ul.pagehead-actions {
 	position: static; /* Demote watch/start/fork */
 }
+
+/* Reduce duplicate backdrop in PR diff view */
 :root .pr-toolbar {
-	/* Extend it to the window borders to hide a bug #735 */
-	padding: 0 calc(50vw - 50%);
-	margin: -20px calc(-50vw + 50%) 0;
+	position: absolute;
+	height: 100%;
 }
 
 @keyframes fade-in {
